--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  pinput: ^5.0.1
   get: ^4.7.2
   smooth_page_indicator: ^1.2.1
+  font_awesome_flutter: ^10.8.0
   flutter:
     sdk: flutter
 
@@ -65,6 +67,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/app_logo.png
+    - assets/images/Group.png
     - assets/images/onboarding/picture1.png
     - assets/images/onboarding/picture2.png
     - assets/images/onboarding/picture3.png
